--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,230 @@
+aiodns==3.1.1
+aiofiles==22.1.0
+aiohttp==3.8.4
+aiohttp-cors==0.7.0
+aiomultiprocess==0.9.0
+aiosignal==1.3.1
+aiosqlite==0.17.0
 altair==5.3.0
-asttokens==2.4.1
-attrs==23.2.0
-blinker==1.8.2
+ansible==7.7.0
+ansible-core==2.14.13
+anyio==4.2.0
+apache-libcloud==3.4.1
+appdirs==1.4.4
+argcomplete==3.1.4
+arrow==1.3.0
+asgiref==3.7.2
+async-timeout==4.0.2
+attrs==23.1.0
+Babel==2.10.3
+backoff==2.2.1
+bcrypt==3.2.2
+beautifulsoup4==4.12.3
+binaryornot==0.4.4
+blinker==1.7.0
+Brlapi==0.8.5
+Brotli==1.1.0
 cachetools==5.3.3
-certifi==2024.7.4
+catfish==4.16.4
+censys==2.2.11
+certifi==2023.11.17
+chardet==5.2.0
 charset-normalizer==3.3.2
-click==8.1.7
-comm==0.2.2
-contourpy==1.2.1
+cliapp==1.20180812.1
+click==8.1.6
+click-plugins==1.1.1
+cmdtest==0.32+git
+colorama==0.4.6
+contourpy==1.2.0
+cookiecutter==2.5.0
+cryptography==41.0.7
+cssselect==1.2.0
 cycler==0.12.1
-debugpy==1.8.2
-decorator==5.1.1
-executing==2.0.1
-fonttools==4.53.0
+cymem==2.0.8
+dbus-python==1.3.2
+debtags==2.1
+Deprecated==1.2.14
+distlib==0.3.8
+distro==1.8.0
+Django==4.2.10
+django-tables2==2.7.0
+dnspython==2.6.1
+fastapi==0.110.0
+filelock==3.13.1
+Flask==3.0.2
+Flask-Cors==4.0.0
+flet==0.19.0
+flet-core==0.19.0
+flet-runtime==0.19.0
+fonttools==4.50.0
+frozenlist==1.3.3
 gitdb==4.0.11
 GitPython==3.1.43
-idna==3.7
-ipykernel==6.29.5
-ipython==8.26.0
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.4.2
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.2
-jupyter_core==5.7.2
+gns3-gui==2.2.38
+gns3-server==2.2.38
+gpg==1.18.0
+gyp-next==0.16.2
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+html5lib==1.1
+httpcore==1.0.4
+httplib2==0.20.4
+httpx==0.24.1
+hyperframe==6.0.0
+idna==3.6
+impacket==0.11.0
+importlib-metadata==4.12.0
+importlib-resources==6.0.1
+invoke==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jmespath==1.0.1
+jsonschema==4.17.3
+keyboard==0.13.5
 kiwisolver==1.4.5
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.1
-matplotlib-inline==0.1.7
+lazr.restfulclient==0.14.6
+lazr.uri==1.0.6
+ldap3==2.9.1
+ldapdomaindump==0.9.4
+libretranslatepy==2.1.1
+lightdm-gtk-greeter-settings==1.2.3
+limits==3.6.0
+lockfile==0.12.2
+louis==3.29.0
+lxml==5.1.0
+Markdown==3.5.2
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+matplotlib==3.8.3
 mdurl==0.1.2
-nest-asyncio==1.6.0
-numpy==2.0.0
-packaging==24.1
+more-itertools==10.2.0
+MouseInfo==0.1.3
+multidict==6.0.4
+mutagen==1.46.0
+natsort==8.0.2
+netaddr==0.10.1
+networkx==3.2.1
+ntlm-auth==1.5.0
+numpy==1.24.2
+oauthlib==3.2.2
+olefile==0.46
+onboard==1.4.1
+opencv-python-headless==4.8.1.78
+packaging==23.1
 pandas==2.2.2
-parso==0.8.4
+paramiko==2.12.0
+passlib==1.7.4
+pdf2image==1.16.3
+pefile==2023.2.7
 pexpect==4.9.0
-pillow==10.4.0
-platformdirs==4.2.2
-prompt_toolkit==3.0.47
-protobuf==5.27.2
-psutil==6.0.0
+pillow==10.2.0
+platformdirs==4.2.0
+ply==3.11
+prettytable==3.7.0
+protobuf==4.25.3
+psutil==5.9.4
 ptyprocess==0.7.0
-pure-eval==0.2.2
+py-cpuinfo==9.0.0
 pyarrow==16.1.0
+pyasn1==0.4.8
+PyAutoGUI==0.9.53
+pycairo==1.25.1
+pycares==4.4.0
+pycryptodomex==3.11.0
+pydantic==1.10.14
 pydeck==0.9.1
-Pygments==2.18.0
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
+pyee==11.1.0
+PyGetWindow==0.0.9
+Pygments==2.17.2
+PyGObject==3.47.0.dev0
+pyinotify==0.9.6
+PyJWT==2.7.0
+pykerberos==1.1.14
+PyMsgBox==1.0.9
+pymssql==2.2.11
+PyNaCl==1.5.0
+pyOpenSSL==23.2.0
+pyparsing==3.1.1
+pypng==0.20231004.0
+pyppeteer==1.0.1
+PyQt5==5.15.9
+PyQt5-sip==12.13.0
+PyRect==0.2.0
+pyrsistent==0.19.3
+PyScreeze==0.1.28
+python-apt==2.7.6
+python-dateutil==2.8.2
+python-debian==0.1.49
+python-dotenv==1.0.1
+python-magic==0.4.27
+python-multipart==0.0.9
+python-slugify==8.0.3
+python3-xlib==0.15
+pytweening==1.0.4
 pytz==2024.1
-pyzmq==26.0.3
-referencing==0.35.1
-requests==2.32.3
+pywinrm==0.4.3
+pyxdg==0.28
+PyYAML==6.0.1
+qrcode==7.4.2
+redis==4.3.4
+repath==0.9.0
+requests==2.31.0
+requests-file==1.5.1
+requests-ntlm==1.1.0
+resolvelib==1.0.1
+retrying==1.3.3
 rich==13.7.1
-rpds-py==0.18.1
-scikit-learn==1.5.1
-scipy==1.14.0
+selinux @ file:///build/reproducible-path/libselinux-3.5/src
+sentry-sdk==1.12.1
+shodan==1.30.1
+simplejson==3.19.2
+sip==6.7.9
 six==1.16.0
+slowapi==0.1.4
 smmap==5.0.1
-stack-data==0.6.3
-streamlit==1.36.0
-tenacity==8.5.0
-threadpoolctl==3.5.0
+sniffio==1.3.0
+soupsieve==2.5
+sqlparse==0.4.4
+starlette==0.31.1
+streamlit==1.34.0
+tenacity==8.3.0
+termcolor==2.3.0
+text-unidecode==1.3
+theHarvester==4.5.1
+tk==0.1.0
+tldextract==3.1.2
 toml==0.10.2
+tononkira==1.1.0
 toolz==0.12.1
-tornado==6.4.1
-traitlets==5.14.3
-typing_extensions==4.12.2
+tornado==6.4
+tqdm==4.66.1
+translate==3.6.1
+ttystatus==0.38
+types-python-dateutil==2.8.19.20240106
+typing_extensions==4.7.1
 tzdata==2024.1
-urllib3==2.2.2
-watchdog==4.0.1
-wcwidth==0.2.13
+ujson==5.9.0
+urllib3==2.0.4
+uvicorn==0.27.0
+uvloop==0.19.0
+vboxapi==1.0
+virtualenv==20.25.1+ds
+wadllib==1.3.6
+wasabi==1.1.2
+watchdog==3.0.0
+wcwidth==0.2.6
+webencodings==0.5.1
+websocket-client==1.7.0
+websockets==11.0.3
+Werkzeug==3.0.1
+wrapt==1.15.0
+wsproto==1.2.0
+wxPython==4.2.1
+xdg==5
+XlsxWriter==3.1.9
+xmltodict==0.13.0
+yarl==1.9.2
+yt-dlp==2024.3.10
+zipp==1.0.0
+zombie-imp==0.0.2
